--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,20 +255,6 @@ section {
   box-shadow: 4rem 4rem 0 var(--blue-50);
   transform: translate(-0.5rem, -0.5rem);
 }
-/* 
-.about-image img:hover .overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: var(--blue-50);
-  z-index: 1;
-  transition: all 0.3s ease;
-}
-.about-image:hover .overlay {
-  height: 0;
-} */
 /* end about */
 
 /* recent work */
@@ -398,7 +384,7 @@ section {
   width: 15rem;
   justify-content: center;
   align-items: center;
-  background-color: var(--white);
+  background-color: transparent;
   font-size: 1.6rem;
   font-weight: 600;
   color: var(--dark);
@@ -406,6 +392,27 @@ section {
   border: 0.5rem solid var(--dark);
   z-index: 1;
   overflow: hidden;
+}
+
+.contact-box .cta::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0;
+  bottom: 0;
+  left: 0;
+  background-color: var(--dark);
+  z-index: -1;
+  transition: all 0.3s ease;
+}
+
+.contact-box .cta:hover::before {
+  height: 100%;
+  color: var(--white);
+}
+
+.contact-box .cta:hover {
+  color: var(--white);
 }
 /* end contact */
 
